Add measure 22 and 23

--- a/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.valideringsrapport.json
+++ b/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.valideringsrapport.json
@@ -90,6 +90,8 @@
               "MEASURE_19",
               "MEASURE_20",
               "MEASURE_21",
+              "MEASURE_22",
+              "MEASURE_23",
               "MESSAGE_02A",
               "MESSAGE_02",
               "MESSAGE_02C",
