--- a/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.valideringsrapport.json
+++ b/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.valideringsrapport.json
@@ -87,6 +87,7 @@
               "MEASURE_12",
               "MEASURE_13",
               "MEASURE_14",
+              "MEASURE_15",
               "MEASURE_19",
               "MEASURE_20",
               "MEASURE_21",
