--- a/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.valideringsrapport.json
+++ b/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.valideringsrapport.json
@@ -120,6 +120,7 @@
               "REPORTER_02",
               "SNAPSHOT_01",
               "SNAPSHOT_02",
+              "SNAPSHOT_03",
               "XSD_VERSION",
               "XSD_VALIDATION",
               "JSON_DESERIALIZE",
