--- a/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migreringsrapport.json
+++ b/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migreringsrapport.json
@@ -1,6 +1,6 @@
 {
-  "$id": "https://github.com/statisticsnorway/fiks-protokoll-json-schemas/blob/main/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migreringsrapport.json",
-  "$schema": "https://json-schema.org/draft/2020-12/schema",
+  "$id": "https://barnevern.ssb.no/migration-report.schema.json",
+  "$schema",: "https://json-schema.org/draft/2020-12/schema",
   "title": "migration-report-response-v1",
   "description": "Migration report for specific municipality",
   "type": "object",
@@ -9,6 +9,68 @@
     "migrationYear",
     "isUsingMigrationId"
   ],
+  "definitions": {
+    "elementCounts": {
+      "$id": "https://barnevern.ssb.no/migration-report-element-counts.schema.json",
+      "$schema": "https://json-schema.org/draft/2020-12/schema",
+      "title": "migration-report-element-counts-v1",
+      "description": "Schema for counts and error section used in https://barn.ssb.no/migration-report-response.v1.schema.json",
+      "type": "object",
+      "required": [
+        "numberOfKostraItems",
+        "numberOfIdentifiedFagsystemItems"
+      ],
+      "properties": {
+        "numberOfKostraItems": {
+          "type": "integer",
+          "description": "Number of Kostra-items inspected"
+        },
+        "numberOfIdentifiedFagsystemItems": {
+          "type": "integer",
+          "description": "Number of Kostra-items inspected"
+        },
+        "errors": {
+          "type": "array",
+          "description": "Array of errors",
+          "items": {
+            "type": "object",
+            "required": [
+              "kostraJournalId",
+              "kostraId",
+              "errorType"
+            ],
+            "properties": {
+              "kostraJournalId": {
+                "type": "string",
+                "description": "Journal ID from Kostra"
+              },
+              "kostraId": {
+                "type": "string",
+                "description": "Element ID from Kostra"
+              },
+              "errorType": {
+                "type": "string",
+                "enum": [
+                  "ElementNotFound",
+                  "MultipleElementsFound",
+                  "StartDateMismatch"
+                ],
+                "description": "Error type"
+              },
+              "fagsystemCaseId": {
+                "type": "string",
+                "description": "Case ID from fagsystem if present"
+              },
+              "migrertId": {
+                "type": "string",
+                "description": "Migration ID for element when present"
+              }
+            }
+          }
+        }
+      }
+    }
+  },
   "properties": {
     "municipalityId": {
       "type": "string",
@@ -24,22 +86,22 @@
       "description": "true when one or more cases with migration-id detected"
     },
     "sak": {
-      "$ref": "https://github.com/statisticsnorway/fiks-protokoll-json-schemas/blob/main/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migrering.elementcounts.json"
+      "$ref": "#/definitions/elementCounts"
     },
     "melding": {
-      "$ref": "https://github.com/statisticsnorway/fiks-protokoll-json-schemas/blob/main/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migrering.elementcounts.json"
+      "$ref": "#/definitions/elementCounts"
     },
     "undersokelse": {
-      "$ref": "https://github.com/statisticsnorway/fiks-protokoll-json-schemas/blob/main/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migrering.elementcounts.json"
+      "$ref": "#/definitions/elementCounts"
     },
     "relasjon": {
-      "$ref": "https://github.com/statisticsnorway/fiks-protokoll-json-schemas/blob/main/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migrering.elementcounts.json"
+      "$ref": "#/definitions/elementCounts"
     },
     "plan": {
-      "$ref": "https://github.com/statisticsnorway/fiks-protokoll-json-schemas/blob/main/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migrering.elementcounts.json"
+      "$ref": "#/definitions/elementCounts"
     },
     "tiltak": {
-      "$ref": "https://github.com/statisticsnorway/fiks-protokoll-json-schemas/blob/main/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migrering.elementcounts.json"
+      "$ref": "#/definitions/elementCounts"
     }
   }
 }
