--- a/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migreringsrapport.json
+++ b/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migreringsrapport.json
@@ -7,7 +7,13 @@
   "required": [
     "municipalityId",
     "migrationYear",
-    "isUsingMigrationId"
+    "isUsingMigrationId",
+    "sak",
+    "melding",
+    "undersokelse",
+    "relasjon",
+    "plan",
+    "tiltak"
   ],
   "definitions": {
     "elementCounts": {
