Added new field "fagsystemId" to https://barnevern.ssb.no/migration-report-element-counts.schema.json

--- a/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migreringsrapport.json
+++ b/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migreringsrapport.json
@@ -67,6 +67,10 @@
                 "type": "string",
                 "description": "Case ID from fagsystem if present"
               },
+              "fagsystemId": {
+                "type": "string",
+                "description": "Element ID from fagsystem if present"
+              },
               "migrertId": {
                 "type": "string",
                 "description": "Migration ID for element when present"
