BAR-875: Added originalWarningLevel to reportEntries

--- a/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.valideringsrapport.json
+++ b/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.valideringsrapport.json
@@ -43,6 +43,13 @@
             ],
             "description": "Warning level."
           },
+          "originalWarningLevel": {
+            "type": "string",
+            "enum": [
+              "ERROR"
+            ],
+            "description": "Original warning level if error is downgraded because of data migration"
+          },
           "ruleId": {
             "type": "string",
             "enum": [
