BAR-906: Added districtId to migration report response

--- a/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migreringsrapport.json
+++ b/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.migreringsrapport.json
@@ -86,6 +86,10 @@
       "type": "string",
       "description": "Four-digit municipality ID"
     },
+    "districtId": {
+      "type": "string",
+      "description": "Two-digit district ID"
+    },
     "migrationYear": {
       "type": "integer",
       "minimum": 2023,
