--- a/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.valideringsrapport.json
+++ b/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.valideringsrapport.json
@@ -59,10 +59,11 @@
               "CASE_FORWARDING_02E",
               "CASE_FORWARDING_02F",
               "CASE_FORWARDING_05",
+              "CASE_01",
               "CASE_02A",
-              "CASE_06",
               "CASE_07",
               "CASE_08",
+              "CASE_21",
               "DECISION_02A",
               "DECISION_02C",
               "DECISION_02E",
@@ -74,6 +75,7 @@
               "DECISION_03",
               "DECISION_04",
               "DECISION_05",
+              "DECISION_19",
               "DECISION_20",
               "INVESTIGATION_02A",
               "INVESTIGATION_02C",
@@ -94,7 +96,6 @@
               "MEASURE_12",
               "MEASURE_13",
               "MEASURE_14",
-              "MEASURE_15",
               "MEASURE_19",
               "MEASURE_20",
               "MEASURE_21",
@@ -121,6 +122,7 @@
               "PLAN_02E",
               "PLAN_02F",
               "PLAN_02G",
+              "PLAN_19",
               "RELOCATION_02C",
               "RELOCATION_02F",
               "REPORTER_01",
@@ -143,11 +145,7 @@
             "type": "string",
             "description": "Detailed warning/error description."
           },
-          "type": {
-            "type": "string",
-            "description": "Warning/error context type name."
-          },
-          "id": {
+          "contextId": {
             "type": "string",
             "description": "Warning/error context identifier (on UUID-format)."
           }
