Removed "type" from required fields

--- a/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.valideringsrapport.json
+++ b/no.ssb.barnevern.fagsystem/no.ssb.barnevern.fagsystem.v1.valideringsrapport.json
@@ -27,8 +27,7 @@
         "required": [
           "warningLevel",
           "ruleName",
-          "errorText",
-          "type"
+          "errorText"
         ],
         "type": "object",
         "properties": {
